--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,3 +1,35 @@
-appname = beegoBlog
-httpport = 8080
-runmode = dev
+AppName = beegoBBS
+ServerName = goBBS
+HTTPPort = 8080
+# prod, dev 或者 test.
+RunMode = dev
+
+AutoRender = true
+
+StaticDir = static
+ViewsPath = views
+
+TemplateLeft = {{{
+TemplateRight = }}}
+
+# Session
+SessionOn = true
+SessionName = GOSESSIONID
+SessionGCMaxLifetime = 3600
+SessionCookieLifeTime = 3600
+SessionProviderConfig = "./tmp"
+SessionAutoSetCookie = true
+SessionDomain =
+
+# Mysql
+mysql_host = 127.0.0.1
+mysql_user = root
+mysql_pass = root
+mysql_port = 3306
+mysql_db = aurora
+
+# DIY
+log_level = debug
+local = "zh-CN"
+blog_cache_expire = 3600
+catalog_cache_expire = 3600
