--- a/conf/app.conf
+++ b/conf/app.conf
@@ -26,7 +26,7 @@ mysql_host = 127.0.0.1
 mysql_user = root
 mysql_pass = root
 mysql_port = 3306
-mysql_db = aurora
+mysql_db = beegoBBS
 
 # DIY
 log_level = debug
