--- a/conf/app.conf
+++ b/conf/app.conf
@@ -14,12 +14,13 @@ TemplateRight = }}}
 
 # Session
 SessionOn = true
+SessionProvider = file
 SessionName = GOSESSIONID
-SessionGCMaxLifetime = 3600
-SessionCookieLifeTime = 3600
+SessionGCMaxLifetime = 3600 * 24
+SessionCookieLifeTime = 3600 * 24
 SessionProviderConfig = "./tmp"
 SessionAutoSetCookie = true
-SessionDomain =
+SessionDomain = /
 
 # Mysql
 mysql_host = 127.0.0.1
@@ -33,3 +34,6 @@ log_level = debug
 local = "zh-CN"
 blog_cache_expire = 3600
 catalog_cache_expire = 3600
+
+# app_secret
+app_secret = gaozhen&cyj2018
