成功实现发送邮件

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -29,11 +29,27 @@ mysql_pass = root
 mysql_port = 3306
 mysql_db = beegoBBS
 
+# XSRF 过滤
+enablexsrf = true
+xsrfkey = 61oETzKXQAGaYdkL5gEmGeJJFuYh7EQnp2XdTP1o
+xsrfexpire = 3600
+
 # DIY
 log_level = debug
 local = "zh-CN"
 blog_cache_expire = 3600
 catalog_cache_expire = 3600
+Url = http://local.beego.com
 
 # app_secret
 app_secret = gaozhen&cyj2018
+
+# 邮箱配置
+mail_driver=smtp
+mail_host=smtp.qq.com
+mail_port=25
+mail_username=786532832@qq.com
+mail_password=vrlskkhpfjzdbcdf
+mail_encryption=tls
+mail_from_address=786532832@qq.com
+mail_from_name=beegoBBS
