--- a/conf/app.conf
+++ b/conf/app.conf
@@ -40,6 +40,7 @@ local = "zh-CN"
 blog_cache_expire = 3600
 catalog_cache_expire = 3600
 Url = http://local.beego.com
+upload_dir = static/upload/
 
 # app_secret
 app_secret = gaozhen&cyj2018
